# sopot

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  changelog.md  licensing-info.txt
common/include/common/config/: AlpineCoreConfig.h  BuildConfig.h  GameConfig.h
common/include/common/version/: version.h  version.rc
common/src/config/: AlpineCoreConfig.cpp  GameConfig.cpp
docs/: BUILDING.md
game_patch/: CMakeLists.txt
game_patch/core/: console.cpp  console.h  frame_limiter.cpp  frame_limiter.h  high_fps.cpp  high_fps.h
game_patch/main/: main.cpp  main.h
game_patch/misc/: misc.cpp  misc.h
game_patch/player/: camera.cpp  camera.h
game_patch/res/: resources.rc
game_patch/rf2/: rf2.h
game_patch/rf2/gr/: gr.h
game_patch/rf2/os/: console.h  input.h  timer.h  window.h
game_patch/rf2/player/: autoaim.h  camera.h  reticle.h
launcher/: CMakeLists.txt  main.cpp
launcher/res/: SopotLauncher.manifest  resources.rc
launcher_common/: CMakeLists.txt  DllInjector.cpp  InjectingProcessLauncher.cpp  InjectingProcessLauncher.h  PatchedAppLauncher.cpp
launcher_common/include/launcher_common/: PatchedAppLauncher.h
patch_common/: CMakeLists.txt
